<resources>
    <string name="app_name">echo361</string>
    <string name="welcome_to_echo361">Welcome to echo361!</string>
    <string name="COURSECODE">COURSECODE</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="what_next">What\'s next?</string>
    <string name="enroll">Enroll</string>
    <string name="drop">Drop</string>
    <string name="mycourse">MyCourse</string>
    <string name="enroll_course_s">enroll course(s)</string>
    <string name="drop_course_s">Drop course(s)</string>
    <string name="go_to_forum">Go to forum</string>
    <string name="go_to_chat">Let\'s chat</string>
    <string name="delete_course">Delete this course</string>
    <string name="drop_course">Drop this course</string>
    <string name="enroll_course">Enroll this course</string>
    <string name="type_the_title_here">Type the title here.</string>
    <string name="type_the_content_here">Type the content here</string>
    <string name="your_current_course">Your current course</string>
    <string name="hi_let_s_chat">Hi! Let\'s chat!</string>
    <string name="type_message_here">Type message here</string>
    <string name="send">Send</string>
    <string name="search_the_course_here">Search the course here.</string>
    <string name="search">Search</string>
    <string name="undergraduate">Undergraduate</string>
    <string name="postgraduate">Postgraduate</string>
    <string name="on_campus">On campus</string>
    <string name="online">Online</string>
    <string name="search_the_name_here">Search the name here.</string>
    <string name="change_code">(change)code</string>
    <string name="the_forum_is_supposed_to_be_collaborative_and_supportive">The forum is supposed to be collaborative and supportive.</string>
    <string name="post">Post</string>
    <string name="block">Block</string>
    <string name="this_is_the_title_for_the_forum">This is the title for the forum</string>
    <string name="this_is_what_the_poster_said">This is what the poster said.</string>
    <string name="share_your_idea">Share your idea.</string>
    <string name="coursecode">CourseCode</string>
    <string name="selectedCourseCode">CourseCode</string>
    <string name="delete">Delete</string>
    <string name="dropCourse">Drop</string>
    <string name="enrollCourse">Enroll</string>
</resources>