<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/gradient_background"
    tools:context=".StudentMainpageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_next"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="200dp"/>

    <Button
        android:id="@+id/btn_toEnroll"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/enroll"
        android:textAllCaps="false"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btn_toDrop"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/drop"
        android:textAllCaps="false"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btn_toMyCourse"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mycourse"
        android:textAllCaps="false"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

</LinearLayout>